2001-10-03  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-jisx0201.el
	(skk-hiragana-to-jisx0201-region)
	(skk-katakana-to-jisx0201-region): Don't consider JISX0201 Roman.

	Comments update.

2001-10-02  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-jisx0201.el:
	Don't define keys here.

	* skk.el
	(skk-require-module): If `skk-use-jisx0201-input-method' is
	non-nil, define keys instead of loading skk-jisx0201.el.

2001-09-30  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* install-info.el:
	Typo.

	* SKK-MK
	(SKK_MODULES): Do not add skk-xm20_4.

	(SKK-MK-skk-dic): Do not push skk-dic in SKK_MODULES.

	* skk-setup.el.in:
	On XEmacs 20.4, load skk-leim.el and skk-autoloads.el.

	* skk-xemacs.el:
	On XEmacs 20.4, load skk-leim.el and skk-autoloads.el.

	(skk-xemacs-prepare-modeline-properties): Do not set some face
	properties on XEmacs 20.4.

	* skk-xm20_4.el:
	No longer in the repository.

	* skk.el
	(skk-mode-invoke): Remove workaround for XEmacs 20.4.

2001-09-23  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-viper.el
	(skk-cursor-current-color): Always set `ad-return-value'.

	(read-from-minibuffer): Add `skk-cursor-set' to
	`minibuffer-setup-hook'.

	* skk-vars.el
	(skk-viper-saved-cursor-color): Don't refer to
	`viper-insert-state-cursor-color' if viper is not required.

2001-09-23  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* skk-viper.el: Check if `viper-insert-state-cursor-color' is
	bound using `if' instead of `static-if' (A user may replace Viper
	with its newer version after installing SKK).
	Check if `viper-insert-state-cursor-color' is
	bound instead of checking by `skk-color-display-p' for cursor
	support.
	(skk-cursor-current-color@around@skk-viper-cursor-ad): Check if 
	`viper-current-state' and `vip-current-state' and are bound using
	`cond' instead of `static-cond'.
	(read-from-minibuffer@before@skk-viper-ad): Not advise if
	`skk-emacs-type' is `xemacs'.
	Change Murata-san's email address to `mrt@notwork.org'.