@@ -6,6 +6,9 @@
 
 	Comments update.
 
+	* skk-isearch.el:
+	Comments update.
+
 2001-10-02  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>
 
 	* skk-jisx0201.el:
@@ -2156,8 +2159,8 @@
 
 
 
-Version: $Id: ChangeLog,v 1.444 2001/10/03 22:09:45 czkmt Exp $
-Last Modified: $Date: 2001/10/03 22:09:45 $
+Version: $Id: ChangeLog,v 1.445 2001/10/03 22:14:57 czkmt Exp $
+Last Modified: $Date: 2001/10/03 22:14:57 $
 
 Local Variables:
 buffer-file-coding-system: iso-2022-jp
